--- a/src/main/webapp/VIEW/addVs.xhtml
+++ b/src/main/webapp/VIEW/addVs.xhtml
@@ -27,6 +27,7 @@
                                               itemValue="#{true}"/>
                                 <f:selectItem itemLabel="#{I18N['notDone']}"
                                               itemValue="#{false}"/>
+                                <p:ajax process="@this" update="@all"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.initErrorMessageFormVS()}"/>
                             </p:selectOneButton>
                         </span>
@@ -48,6 +49,7 @@
                             <div class="field col-12 md:col-4">
                                 <p:outputLabel for="input_Vs_Date" value="#{I18N['vsPage.vsDate']}"/>
                                 <p:datePicker id="input_Vs_Date" value="#{vsBean.vs.vsDate}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100">
+                                    <p:ajax process="@this" update="@all"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDate()}"/>
                                 </p:datePicker>
                             </div>
@@ -81,6 +83,7 @@
                                 <p:inputNumber id="input_height" class="label" value="#{vsBean.vs.height}"
                                                placeholder="#{I18N['vsPage.height.placeholder']}"
                                                validatorMessage="#{I18N['vsPage.height.errorMessage']}" decimalPlaces="1">
+                                    <p:ajax process="@this" update="@all"/>
                                     <p:ajax update="messageHeight" event="blur"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeHeightCm()}"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeHeightInches()}"/>
@@ -115,6 +118,7 @@
                                                var="Height"
                                                itemLabel="#{Height.getHeightU()}"
                                                itemValue="#{Height}"/>
+                                <p:ajax process="@this" update="@all"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeHeightCm()}"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeHeightInches()}"/>
                             </p:selectOneMenu>
@@ -150,6 +154,7 @@
                             <p:inputNumber id="input_weight" class="label" value="#{vsBean.vs.weight}"
                                            placeholder="#{I18N['vsPage.weight.placeholder']}"
                                            validatorMessage="#{I18N['vsPage.weight.errorMessage']}" decimalPlaces="1">
+                                <p:ajax process="@this" update="@all"/>
                                 <p:ajax update="messageWeight" event="blur"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeWeightKg()}"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeWeightPounds()}"/>
@@ -184,6 +189,7 @@
                                                var="Weight"
                                                itemLabel="#{Weight.getWeightU()}"
                                                itemValue="#{Weight}"/>
+                                <p:ajax process="@this" update="@all"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeWeightKg()}"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeWeightPounds()}"/>
                             </p:selectOneMenu>
@@ -219,6 +225,7 @@
                                     <p:inputNumber id="input_sbp" class="label" value="#{vsBean.vs.sbp}"
                                            placeholder="#{I18N['vsPage.input_sbp.placeholder']}"
                                            validatorMessage="#{I18N['vsPage.input_sbp.errorMessage']}" decimalPlaces="1">
+                                        <p:ajax process="@this" update="@all"/>
                                         <p:ajax update="messageSbp" event="blur"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testSbp()}"/>
@@ -242,6 +249,7 @@
                                     <p:inputNumber id="input_dbp" class="label" value="#{vsBean.vs.dbp}"
                                            placeholder="#{I18N['vsPage.input_dbp.placeholder']}"
                                            validatorMessage="#{I18N['vsPage.input_dbp.errorMessage']}" decimalPlaces="1">
+                                        <p:ajax process="@this" update="@all"/>
                                         <p:ajax update="messageDbp" event="blur"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
                                         <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbp()}"/>
@@ -308,6 +316,7 @@
                                 <p:inputNumber id="input_rr" class="label" value="#{vsBean.vs.rr}"
                                                placeholder="#{I18N['vsPage.input_rr.placeholder']}"
                                                validatorMessage="#{I18N['vsPage.input_rr.errorMessage']}" decimalPlaces="0">
+                                    <p:ajax process="@this" update="@all"/>
                                     <p:ajax update="messagerr" event="blur"/>
                                     <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testRr()}"/>
                                 </p:inputNumber>
@@ -338,6 +347,7 @@
                                                placeholder="#{I18N['vsPage.input_temp.placeholder']}"
                                                validatorMessage="#{I18N['vsPage.input_temp.errorMessage']}" decimalPlaces="1">
                                     <p:ajax update="messagetemp" event="blur"/>
+                                    <p:ajax process="@this" update="@all"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempC()}"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempF()}"/>
                                     </p:inputNumber>
@@ -371,6 +381,7 @@
                                                    var="Temp"
                                                    itemLabel="#{Temp.getTempU()}"
                                                    itemValue="#{Temp}"/>
+                                    <p:ajax process="@this" update="@all"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempC()}"/>
                                     <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testRangeTempF()}"/>
                                 </p:selectOneMenu>
@@ -401,6 +412,7 @@
                                                var="TempRoute"
                                                itemLabel="#{TempRoute.getTempRoute()}"
                                                itemValue="#{TempRoute}"/>
+                                    <p:ajax process="@this" update="@all"/>
                                 </p:selectOneMenu>
                             </span>
                             </h:panelGroup>
@@ -421,6 +433,7 @@
                             <p:inputNumber id="input_oxy" class="label" value="#{vsBean.vs.temp}"
                                            placeholder="#{I18N['vsPage.input_oxy.placeholder']}"
                                            validatorMessage="#{I18N['vsPage.input_oxy.errorMessage']}" decimalPlaces="1">
+                                <p:ajax process="@this" update="@all"/>
                                 <p:ajax update="messageoxy" event="blur"/>
                                 <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testOxy()}"/>
                             </p:inputNumber>
